# hades

./: .gitignore  README.md  __main__.py  main.py  manifest.yaml  pyproject.toml
hades/: __init__.py  crypto.py  db.py  main.py  oauth.py  slack.py  unicode.py
