[project]
name = "hades"
version = "0.1.0"
description = "transparent message anonymizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.4",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "slack-sdk>=3.36.0",
    "tqdm>=4.67.1",
    "typer>=0.17.2",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "types-tqdm>=4.67.0.20250809",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
