[project]
name = "hades"
version = "0.1.0"
description = "transparent message anonymizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "slack-sdk>=3.39.0",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "types-tqdm>=4.67.0.20250809",
]
