[project]
name = "hades-slack"
version = "0.1.2"
description = "transparent slack message anonymizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "slack-sdk>=3.39.0",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]
license = "GPL-3.0"
keywords = ["slack", "privacy", "encryption", "anonymizer", "messages"]

[project.urls]
Homepage = "https://github.com/ImShyMike/hades"
Repository = "https://github.com/ImShyMike/hades"
Issues = "https://github.com/ImShyMike/hades/issues"

[project.scripts]
hades = "hades:app"

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "types-tqdm>=4.67.0.20250809",
]
